examples/misc/error/eval_nd-module.bfr
let _ = M:x

codegen []